select portions and portionSize component in add recipy to calendar modal

--- a/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -58,7 +58,9 @@
         <app-recipy-in-calendar-select-date [initialValue]="selectedTime?.toISOString()" (valueChanged)="onDateChanged($event)"></app-recipy-in-calendar-select-date>
       </ng-container>
 
-      <ng-container *ngIf="currentView === AddRecipyToCalView.SetAmount"></ng-container>
+      <ng-container *ngIf="currentView === AddRecipyToCalView.SetAmount">
+        <app-recipy-in-calendar-select-portions-and-amount (amountValueChanged)="onAmountSelected($event)" (portionsValueChanged)="onPortionsSelected($event)"></app-recipy-in-calendar-select-portions-and-amount>
+      </ng-container>
     </ion-content>
   </ng-template>
 </ion-modal>
