--- a/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.scss
+++ b/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.scss
@@ -6,6 +6,8 @@
     padding: 10px 0;
 
     .recipy-selection-section {
-        padding: 10px 0;
+        padding: 0;
+        display: flex;
+        gap: 5px;
     }
 }
