add recipy to calendar reworked method

--- a/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/calendar/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -69,7 +69,7 @@
     </ion-content>
     <ion-footer>
       <ion-toolbar>
-        <ion-button expand="full" [disabled]="isAddDisabled">Додати</ion-button>
+        <ion-button expand="full" [disabled]="isAddDisabled" (click)="addRecipyToCalendar()">Додати</ion-button>
       </ion-toolbar>
     </ion-footer>
   </ng-template>
