--- a/src/app/calendar/recipy-preview/recipy-preview.component.html
+++ b/src/app/calendar/recipy-preview/recipy-preview.component.html
@@ -51,10 +51,10 @@
     </div>
   </ion-button>
 
-  <ion-button (click)="onChangeRecipyDate()">
+  <ion-button (click)="onEditRecipy()">
     <div>
-      <ion-icon name="move-outline"></ion-icon>
-      <p>Змінити дату</p>
+      <ion-icon name="create-outline"></ion-icon>
+      <p>Змінити запис</p>
     </div>
   </ion-button>
   
