moved current day selector to toolbar

--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -1,4 +1,7 @@
 <app-header>
+  <div title>
+    <app-calendar-day-selector></app-calendar-day-selector>
+  </div>
   <div right-button>
     <app-add-recipy-to-calendar-modal></app-add-recipy-to-calendar-modal>
   </div>
