--- a/src/app/calendar/add-comment-to-calendar-modal/add-comment-to-calendar-modal.component.html
+++ b/src/app/calendar/add-comment-to-calendar-modal/add-comment-to-calendar-modal.component.html
@@ -3,13 +3,13 @@
         <ion-buttons slot="start">
             <ion-button (click)="cancel()">Cancel</ion-button>
         </ion-buttons>
-        <ion-title>Коментар</ion-title>
+        <ion-title>{{title}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
     <ion-item class="add-new-list" button detail="false">
-        <ion-label position="floating">Введіть коментар:</ion-label>
+        <ion-label position="floating">Введіть {{title.toLowerCase()}}:</ion-label>
         <ion-input [(ngModel)]="comment"></ion-input>
     </ion-item>
     <h6>Виберіть дату і час:</h6>
