--- a/src/app/calendar/calendar-smart-wrapper/calendar.component.html
+++ b/src/app/calendar/calendar-smart-wrapper/calendar.component.html
@@ -1,1 +1,2 @@
-<app-calendar-timeline-day class="day-details" [selectedDay]="(currentDay$ | async)?.toString()" [recipies]="currentDateDetails$ | async"></app-calendar-timeline-day>
+<app-calendar-timeline-day class="day-details" [selectedDay]="(currentDay$ | async)?.toString()"
+    [recipies]="currentDateDetails$ | async" [comments]="currentDayComments$|async"></app-calendar-timeline-day>
