--- a/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
@@ -28,7 +28,14 @@
             </ng-template>
           </ion-popover>
         </ng-container>
+        <ng-container *ngFor="let comment of comments">
+          <div class="timeline-comment"
+            [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)"
+            >
+            {{comment.comment}}
 
+          </div>
+        </ng-container>
       </div>
     </ng-container>
   </div>
