--- a/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.scss
+++ b/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.scss
@@ -52,8 +52,9 @@
     gap: 5px;
 }
 
-.timeline-recipy {
-    width: 80px;
+.timeline-recipy,
+.timeline-comment {
+    width: 120px;
     padding: 5px;
     background: var(--ion-color-tertiary);
     display: flex;
@@ -61,6 +62,10 @@
     justify-content: center;
     text-align: center;
     font-size: 0.8em;
+}
+
+.timeline-comment {
+    border-radius: 3px;
 }
 
 .background-grid {
