--- a/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/calendar/calendar-timeline-day/calendar-timeline-day.component.html
@@ -7,35 +7,40 @@
     </ng-container>
 
   </div>
-  <div class="timeline-body">
+  <div class="timeline-body" #recipiesContainer>
     <ng-container *ngIf="timelineScaleItems">
       <div class="background-grid">
         <div *ngFor="let scale of timelineScaleItems" class="scale-item"> </div>
       </div>
 
-      <div class="recipies-container">
-        <ng-container *ngFor="let recipy of recipies">
-          <div class="timeline-recipy"
-            [style]="'height: ' + getRecipyHeight(recipy) + 'px; margin-top: ' + getRecipyTopMargin(recipy) + 'px'"
-            [id]="recipy.id + '_' + recipy.endTime">
-            {{recipy.name}}
+      <div class="recipies-container" [style]="'width:' + recipiesContainer.offsetWidth + 'px'">
+        <div class="recipies-container-scrolling">
+          <ng-container *ngFor="let recipy of recipies">
+            <div class="timeline-recipy"
+              [style]="'height: ' + getRecipyHeight(recipy) + 'px; margin-top: ' + getRecipyTopMargin(recipy) + 'px'"
+              [id]="recipy.id + '_' + recipy.endTime">
+              {{recipy.name}}
 
-          </div>
-          <ion-popover #popover class="recipy-preview" [trigger]="recipy.id + '_' + recipy.endTime" triggerAction="click">
-            <ng-template>
-              <ion-content>
-                <app-recipy-preview [recipy]="recipy" (closePopover)="popover.dismiss()" (editClicked)="onEditRecipy($event)"></app-recipy-preview></ion-content>
-            </ng-template>
-          </ion-popover>
-        </ng-container>
-        <ng-container *ngFor="let comment of comments">
-          <div class="timeline-comment"
-            [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)"
-            >
-            {{comment.comment}}
+            </div>
+            <ion-popover #popover class="recipy-preview" [trigger]="recipy.id + '_' + recipy.endTime"
+              triggerAction="click">
+              <ng-template>
+                <ion-content>
+                  <app-recipy-preview [recipy]="recipy" (closePopover)="popover.dismiss()"
+                    (editClicked)="onEditRecipy($event)"></app-recipy-preview></ion-content>
+              </ng-template>
+            </ion-popover>
+          </ng-container>
+          <ng-container *ngFor="let comment of comments">
+            <div class="timeline-comment"
+              [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)">
+              {{comment.comment}}
 
-          </div>
-        </ng-container>
+            </div>
+          </ng-container>
+
+        </div>
+
       </div>
     </ng-container>
   </div>
