--- a/src/app/pages/user/components/clear-old-data/clear-old-data.component.html
+++ b/src/app/pages/user/components/clear-old-data/clear-old-data.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="isOlDataAvailable">
 <p>You have data older than three months available which slows down the app</p>
 <ion-item>
-    <ion-label position="floating">Enter amount of months to store:</ion-label>
-   <ion-input [(ngModel)]="numberOfMonthsToStore"></ion-input> 
+    <ion-label position="floating">Data added before {{oldDate}} will be deleted:</ion-label>
 </ion-item>
 <ion-button (click)="deleteOldData()">Delete</ion-button>
 
