--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -3,9 +3,11 @@
     <app-calendar-day-selector></app-calendar-day-selector>
   </div>
   <div right-button>
-    <ion-button id="open-action-sheet"><ion-icon name="add-circle-outline"></ion-icon></ion-button>
-    <ion-action-sheet trigger="open-action-sheet" header="Виберіть що потрібно додати:" [buttons]="actionSheetButtons"
+    <app-products-per-day></app-products-per-day>
+    <ion-button id="open-add-action-sheet"><ion-icon name="add-circle-outline"></ion-icon></ion-button>
+    <ion-action-sheet trigger="open-add-action-sheet" header="Виберіть що потрібно додати:" [buttons]="actionSheetButtons"
       (didDismiss)="onActionSelected($event)"></ion-action-sheet>
+      
   </div>
 </app-header>
 
