--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -29,8 +29,8 @@
             <span>{{selectedRecipy?.name}}</span>
           </div>
           <div class="recipy-selection-section" (click)="changeCurrentView(AddRecipyToCalView.SelectDate)">
-            <span>Час приготування:</span>
-            <span>{{(selectedTime | date: 'dd MMM yyyy, hh:mm a') || '-'}}</span>
+            <span>Час:</span>
+            <span>{{(selectedTime | date: 'EEE, dd MMM yyyy, hh:mm a') || '-'}}</span>
           </div>
           <div class="recipy-selection-section" (click)="changeCurrentView(AddRecipyToCalView.SetAmount)">
             <span>Порцій:</span>
@@ -75,7 +75,7 @@
 
     <ng-container *ngIf="currentView === AddRecipyToCalView.SetAmount">
       <app-recipy-in-calendar-select-portions-and-amount (amountValueChanged)="onAmountSelected($event)"
-        (portionsValueChanged)="onPortionsSelected($event)"></app-recipy-in-calendar-select-portions-and-amount>
+        (portionsValueChanged)="onPortionsSelected($event)" [initialPortionsValue]="portions" [initialAmountValue]="portionSize"></app-recipy-in-calendar-select-portions-and-amount>
     </ng-container>
 
   </ion-content>
