explicit save button text in add recipy to calendar modal

--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -82,9 +82,9 @@
   <ion-footer>
     <ion-toolbar>
       <ion-button *ngIf="!isEditMode" expand="full" [disabled]="isAddDisabled"
-        (click)="addRecipyToCalendar()">Додати</ion-button>
+        (click)="addRecipyToCalendar()">{{saveButtonText}}</ion-button>
       <ion-button *ngIf="isEditMode" expand="full" [disabled]="isAddDisabled"
-        (click)="saveUpdatedRecipyToCalendar()">Зберегти</ion-button>
+        (click)="saveUpdatedRecipyToCalendar()">{{saveButtonText}}</ion-button>
 
     </ion-toolbar>
   </ion-footer>
