short recipy in calendar view improvements

--- a/src/app/pages/calendar/components/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/components/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -22,7 +22,7 @@
     [portions]="portions$ | async"
     (portionsChanged)="onPortionsChanged($event)"
   ></app-recipy-full-view>
-  <app-comments-block [currentUser]="user$ | async" [recipyId]="(recipy$ | async)?.id"></app-comments-block>
+  <app-comments-block [recipyId]="(recipy$ | async)?.id"></app-comments-block>
 </ion-content>
 
 <ng-template #loading>
