--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -9,7 +9,7 @@
     <div *ngFor="let recipy of recipies; let index = index">
       <app-recipy-short-view *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="user$ | async" [recipy]="recipy"
         [productPreferencesChips]="productChips" [isBigScreen]="isBigScreen"></app-recipy-short-view>
-      <app-comments-block *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="currentUser"
+      <app-comments-block *ngIf="index < numberOfRecipiesToDisplay"
         [recipyId]="recipy.id"></app-comments-block>
     </div>
     <ion-infinite-scroll *ngIf="numberOfRecipiesToDisplay <= recipies.length" (ionInfinite)="onIonInfinite($event)">
