--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.scss
@@ -31,3 +31,33 @@
       }
     }
   }
+
+  .comments-block-wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+
+  .ion-item-wrapper {
+    width: 100%;
+  }
+
+  .ingrediends-block-wrapper, .steps-block-wrapper{
+    display: flex;
+    flex-direction: column;
+    
+    font-size: 10px;
+    .title {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+  }
+
+  .ingrediends-block-wrapper{
+    padding: 0 15px 0 0;
+  }
+
+  .steps-block-wrapper{
+    padding: 0 10px 0 15px;
+  }
