--- a/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.scss
+++ b/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.scss
@@ -47,6 +47,10 @@
         background-color: var(--ion-color-light);
     }
 
+    &.point-now{
+        border-block: 1px dashed var(--ion-color-primary) !important;
+    }
+
 }
 
 .recipies-container {
