--- a/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.scss
+++ b/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.scss
@@ -75,6 +75,7 @@
     justify-content: center;
     text-align: center;
     font-size: 0.8em;
+    flex-direction: column;
 }
 
 .timeline-comment {
