delete comment functionality

--- a/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.html
@@ -33,7 +33,7 @@
           </ng-container>
           <ng-container *ngFor="let comment of comments">
             <div class="timeline-comment"
-              [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)">
+              [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)" (click)="onCommentClicked(comment)">
               {{comment.comment}}
 
             </div>
