--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -2,7 +2,7 @@
   <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
 </ion-button>
 
-<ion-modal [trigger]="'filters-modal' + pageId" [initialBreakpoint]="0.75" [breakpoints]="[0.25, 0.5, 0.75]">
+<ion-modal [trigger]="'filters-modal' + pageId" [initialBreakpoint]="0.75" [breakpoints]="[0.25, 0.5, 0.75, 1]">
   <ng-template>
     <ion-header>
       <ion-toolbar>
