--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/add-recipy-to-calendar-modal.component.html
@@ -71,6 +71,10 @@
     <ng-container *ngIf="currentView === AddRecipyToCalView.SelectDate">
       <app-recipy-in-calendar-select-date [initialValue]="selectedTime?.toISOString()"
         (valueChanged)="onDateChanged($event)"></app-recipy-in-calendar-select-date>
+        <div>
+          <div>Shortcuts:</div>
+          <ion-chip *ngFor="let item of (timeShortcuts$ | async)" (click)="changeTime(item)">{{item}}</ion-chip>
+        </div>
     </ng-container>
 
     <ng-container *ngIf="currentView === AddRecipyToCalView.SetAmount">
