adjusted alignment for calendar comments

--- a/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.html
+++ b/src/app/pages/calendar/components/calendar-timeline-day/calendar-timeline-day.component.html
@@ -17,7 +17,7 @@
         <div class="recipies-container-scrolling">
           <ng-container *ngFor="let comment of comments">
             <div class="timeline-comment"
-              [style]="'height: 40px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)" (click)="onCommentClicked(comment)">
+              [style]="'height:'+ commentHeight + 'px; margin-top: ' + getCommentTopMargin(comment) + 'px; background-color: ' + getCommentBackground(comment)" (click)="onCommentClicked(comment)">
               {{comment.comment}}
 
             </div>
