--- a/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.html
+++ b/src/app/pages/calendar/components/add-recipy-to-calendar-modal/recipy-in-calendar-short-view/recipy-in-calendar-short-view.component.html
@@ -54,7 +54,7 @@
         </div>
 
       </ion-label>
-      <app-comments-block [recipyId]="recipy.id"></app-comments-block>
+      <app-comments-block [recipyId]="recipy.id" [recipyName]="recipy.name"></app-comments-block>
     </div>
 
   </ion-item>
