--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -10,7 +10,7 @@
       <app-recipy-short-view *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="user$ | async" [recipy]="recipy"
         [productPreferencesChips]="productChips" [isBigScreen]="isBigScreen"></app-recipy-short-view>
       <app-comments-block *ngIf="index < numberOfRecipiesToDisplay"
-        [recipyId]="recipy.id"></app-comments-block>
+        [recipyId]="recipy.id" [recipyName]="recipy.name"></app-comments-block>
     </div>
     <ion-infinite-scroll *ngIf="numberOfRecipiesToDisplay <= recipies.length" (ionInfinite)="onIonInfinite($event)">
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
