--- a/src/app/pages/shopping-list/shopping-list.page.html
+++ b/src/app/pages/shopping-list/shopping-list.page.html
@@ -1,11 +1,17 @@
 <app-header>
   <span title>Список покупок</span>
-  <ion-button right-button size="small" [color]="isRecordExpenseOnBought? 'primary' : 'medium'" (click)="isRecordExpenseOnBought = !isRecordExpenseOnBought"><ion-icon name="cash-outline"
-    slot="icon-only"></ion-icon></ion-button>
+  <ion-button right-button size="small" [color]="isRecordExpenseOnBought? 'primary' : 'medium'"
+    (click)="isRecordExpenseOnBought = !isRecordExpenseOnBought"><ion-icon name="cash-outline"
+      slot="icon-only"></ion-icon></ion-button>
   <ion-button right-button size="small" (click)="addCustomItem()"><ion-icon name="add"
       slot="icon-only"></ion-icon></ion-button>
-  <ion-button *ngIf="currentTab === tabs[0].name" right-button size="small" id="open-datepicker-modal"><ion-icon
-      name="add-circle-outline" slot="icon-only"></ion-icon></ion-button>
+  <ng-container *ngIf="currentTab === tabs[0].name" right-button>
+    <app-multiple-dates-picker-modal (datesSelected)="addFromCalendar($event)">
+      <ion-icon button-inside
+  name="add-circle-outline" slot="icon-only"></ion-icon>
+    </app-multiple-dates-picker-modal>
+  </ng-container>
+
   <ion-button *ngIf="currentTab === tabs[1].name" right-button size="small" (click)="removeBought()"><ion-icon
       name="trash-bin-outline" slot="icon-only"></ion-icon></ion-button>
 </app-header>
@@ -31,8 +37,10 @@
                   <ion-item-sliding class="slidingContainer" *ngIf="!item.completed">
                     <ion-item-options side="start">
                       <div class="price-info">
-                        <p><ion-icon color="success" name="arrow-down-outline"></ion-icon> {{getLowestPrice(item.title) | async}}</p>
-                        <p><ion-icon color="danger" name="arrow-up-outline"></ion-icon>  {{getHighestPrice(item.title) | async}}</p>
+                        <p><ion-icon color="success" name="arrow-down-outline"></ion-icon> {{getLowestPrice(item.title)
+                          | async}}</p>
+                        <p><ion-icon color="danger" name="arrow-up-outline"></ion-icon> {{getHighestPrice(item.title) |
+                          async}}</p>
                       </div>
                     </ion-item-options>
                     <ion-item>
@@ -99,23 +107,5 @@
 
 
 
-  <ion-modal trigger="open-datepicker-modal" (willDismiss)="onWillDismiss($event)" [initialBreakpoint]="0.5"
-    [breakpoints]="[0.5, 0.75]">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="start">
-            <ion-button (click)="cancel()">Скасувати</ion-button>
-          </ion-buttons>
-          <ion-title>Виберіть дати</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="confirm()" [strong]="true">Ок</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <ion-datetime presentation="date" [multiple]="true" (ionChange)="selectedDateChanged($event)"></ion-datetime>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+
 </ion-content>
