--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -3,11 +3,14 @@
     <app-calendar-day-selector></app-calendar-day-selector>
   </div>
   <div right-button>
+    <app-multiple-dates-picker-modal (datesSelected)="exportToPDF($event)">
+      <ion-icon button-inside name="save-outline" slot="icon-only"></ion-icon>
+    </app-multiple-dates-picker-modal>
     <app-products-per-day></app-products-per-day>
     <ion-button id="open-add-action-sheet"><ion-icon name="add-circle-outline"></ion-icon></ion-button>
-    <ion-action-sheet trigger="open-add-action-sheet" header="Виберіть що потрібно додати:" [buttons]="actionSheetButtons"
-      (didDismiss)="onActionSelected($event)"></ion-action-sheet>
-      
+    <ion-action-sheet trigger="open-add-action-sheet" header="Виберіть що потрібно додати:"
+      [buttons]="actionSheetButtons" (didDismiss)="onActionSelected($event)"></ion-action-sheet>
+
   </div>
 </app-header>
 
