--- a/src/app/pages/calendar/components/save-calendar-as-pdf-preview/save-calendar-as-pdf-preview.component.scss
+++ b/src/app/pages/calendar/components/save-calendar-as-pdf-preview/save-calendar-as-pdf-preview.component.scss
@@ -1,50 +1,15 @@
 .recipy-list {
-    display: flex;
-    gap: 5px;
-    width: 100%;
-    flex-wrap: wrap;
-
+    gap: 5px !important;
     &>div {
-        width: 100%;
+        width: 100% !important;
     }
 }
 
 #calendar-preview {
-    font-size: 14px;
-    overflow-y: auto;
+    overflow-y: auto !important;
+    padding: 5px !important;
 }
 
 .element-date {
-    text-align: center;
-    margin-block: 10px;
-    font-weight: bold;
-}
-
-.meal-name {
-    padding-inline: 5px;
-    font-size: smaller;
-}
-
-@media print {
-    .recipy-list {
-        margin-bottom: 20px;
-        gap: 20px;
-
-        &>div {
-            width: 25%;
-        }
-    }
-
-    #calendar-preview {
-        overflow: visible;
-        padding: 25px;
-    }
-
-    .element-date {
-        font-size: 18px;
-    }
-
-    .meal-name {
-        font-size: 14px;
-    }
+   font-size: 16px !important;
 }
