--- a/src/app/pages/calendar/components/save-calendar-as-pdf-preview/save-calendar-as-pdf-preview.component.html
+++ b/src/app/pages/calendar/components/save-calendar-as-pdf-preview/save-calendar-as-pdf-preview.component.html
@@ -11,7 +11,7 @@
       gap: 25px;
       width: 100%;
       flex-wrap: wrap; margin-bottom: 20px;">
-        <div *ngFor="let recipy of element.breakfast" style="width: 25%">
+        <div *ngFor="let recipy of element.breakfast" style="width: 300px; min-width: 300px;">
           <app-calendar-pdf-preview-short-recipy [recipy]="recipy"></app-calendar-pdf-preview-short-recipy>
         </div>
 
@@ -24,7 +24,7 @@
       gap: 25px;
       width: 100%;
       flex-wrap: wrap; margin-bottom: 20px;">
-        <div *ngFor="let recipy of element.lunch" style="width: 25%">
+        <div *ngFor="let recipy of element.lunch" style="width: 300px; min-width: 300px">
           <app-calendar-pdf-preview-short-recipy [recipy]="recipy"></app-calendar-pdf-preview-short-recipy>
         </div>
       </div>
@@ -36,7 +36,7 @@
       gap: 25px;
       width: 100%;
       flex-wrap: wrap; margin-bottom: 20px;">
-        <div *ngFor="let recipy of element.dinner" style="width: 25%">
+        <div *ngFor="let recipy of element.dinner" style="width: 300px; min-width: 300px">
           <app-calendar-pdf-preview-short-recipy [recipy]="recipy"></app-calendar-pdf-preview-short-recipy>
         </div>
       </div>
