--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -22,6 +22,9 @@
         <span class="filter-item-title">Пошук за назвою:</span>
         <app-search-recipies-filter [isClearOnDestroy]="false"></app-search-recipies-filter>
       </div>
+      <div class="filter-item">
+        <app-sorting-filter></app-sorting-filter>
+      </div>
       <div class="filter-item" *ngIf="(userCollections$ | async)?.length">
         <span class="filter-item-title">Показати страви з колекцій:</span>
         <app-collection-selector [userCollections]="userCollections$ | async"></app-collection-selector>
